Fixed typo in composer json.

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 	"authors": [
 		{
 			"name": "Juan Basso",
-			"email": "juan.basso@zumba.com",
+			"email": "juan.basso@zumba.com"
 		},
 		{
 			"name": "Chris Saylor",
