--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
 	"require": {
 		"php": ">=5.3.10",
 		"squizlabs/php_codesniffer": "1.5.3"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "^4"
 	}
 }
