--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,13 @@
 		}
 	],
 	"require": {
-		"php": ">=7.2",
-		"squizlabs/php_codesniffer": "1.5.3"
+		"php": ">=8.0",
+		"squizlabs/php_codesniffer": "3.7.1"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "5.7.27"
+		"phpunit/phpunit": "8.5.20"
+	},
+	"scripts": {
+		"test": "./vendor/bin/phpunit"
 	}
 }
